--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <title> EDITORIAL GRETHEL | LIBROS PREUNIVERSITARIOS</title>
     <script src="JS - Principal.js"></script>
     <script src="JS - Carrito.js"></script>
-    
     <link rel="stylesheet" href="CSS - Principal.css"></link>
-
     <link rel="stylesheet" href="CSS - Carrito.css"></link>
     <link rel="icon" sizes="180x180" href="ICON/android-chrome-192x192.webp">
     <link rel="icon" type="image/png" sizes="32x32" href="ICON/favicon-32x32.webp">
@@ -49,7 +47,7 @@
    <!-- Activadores -->
 <a href="/Usuario" class="btn__login" id="loginTrigger1">
     <img src="Imagen-Login.webp" alt="Login" loading="eager" class="login-icon">
-    <h3 id="userDNI">Nombre del Usuario</h3>
+    <h3 style="font-size: 11PX; width: auto; MARGIN-LEFT: 0px;" id="userDNI">Nombre del Usuario</h3>
 </a>
 
 
@@ -86,7 +84,7 @@
 
             <a href="/Usuario" class="btn__login" id="loginTrigger2">
                 <img src="Imagen-Login.webp" alt="Login" loading="eager" class="login-icon-header">
-                <h3 id="userNames">Nombre del Usuario</h3>
+                <h3  id="userNames">Nombre del Usuario </h3>
             </a>
             
 
