--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
 
 
-   <!-- Activadores -->
+  <!-- Activadores -->
+
+   <div class="login y carrito">
 <a href="/Usuario" class="btn__login" id="loginTrigger1">
     <img src="Imagen-Login.webp" alt="Login" loading="eager" class="login-icon">
-    <h3 style="font-size: 11PX; width: auto; MARGIN-LEFT: 0px;" id="userDNI">Nombre del Usuario</h3>
+    <h3 style=" font-size: 11PX; width: auto; margin-left: 0px;" id="userDNI">Nombre del Usuario</h3>
 </a>
 
 
@@ -57,7 +59,7 @@
                 <img src="CARRITO.webp" alt="carrito" loading="eager" class="login-carrito">
                 <span class="cart-count">3</span> <!-- Este es el número de pedidos -->
             </a>
-
+        </div>
         </label>
 
         <nav class="navbar fade-in">
