--- a/detalleCompra.html
+++ b/detalleCompra.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles de la Boleta</title>
     <link rel="stylesheet" href="CSS - Boleta.css">
-
+    <link rel="icon" sizes="180x180" href="ICON/android-chrome-192x192.webp">
+    <link rel="icon" type="image/png" sizes="32x32" href="ICON/favicon-32x32.webp">
+    <link rel="icon" type="image/png" sizes="16x16" href="ICON/favicon-16x16.webp">
+    <link rel="manifest" href="site.webmanifest">
+    <script src="https://kit.fontawesome.com/21bc0e3a65.js" crossorigin="anonymous"></script>
 
 
     
