--- a/EditorialPreUNI.html
+++ b/EditorialPreUNI.html
@@ -148,7 +148,7 @@
           <div class="container__trust container__box-cardPrimary"  id="product-container">
 
             <div class="card__trust box__card-primary fade-in"  data-product-id="">
-                <img src="/IMAGENES POR COLECCIONES/CEPRE UNI/CEPRE UNI - CICLOS.webp" alt="">
+                <a href="/EditorialPreUNI/CiclosPasadosCepreUNI"><img src="/IMAGENES POR COLECCIONES/CEPRE UNI/CEPRE UNI - CICLOS.webp" alt=""></a>
                 <h2> Ciclos pasados CEPRE UNI</h2>
                 <p> Contiene ciclos pasados de Cepre UNI (Ordinario, Extraordinario, IEN)</p>
                 <a href="/EditorialPreUNI/CiclosPasadosCepreUNI"><button class="btn__add-cart">Ver Colección</button></a>
