--- a/Formularios,Guías,etc.html
+++ b/Formularios,Guías,etc.html
@@ -216,14 +216,14 @@
                  <div class="card__trust box__card-primary fade-in"  data-product-id="519">
                     <img src="/AÑADIR IMAGENES/IMAGENES LIBROS/GUÍAS-SOLUCIONARIOS-EXTRA/SAMANIEGO 1.webp" alt="">
                     <h2>Historia del Perú </h2>
-                    <p> El mejor libro de Hu por Frank Samaniego </p>
+                    <p> El mejor libro de H.P. por Frank Samaniego </p>
                     <p class="precio"> S/ 23</p>
                      <button class="btn__add-cart">Añadir al Carrito</button>
                  </div>
                  <div class="card__trust box__card-primary fade-in"  data-product-id="520">
                     <img src="/AÑADIR IMAGENES/IMAGENES LIBROS/GUÍAS-SOLUCIONARIOS-EXTRA/SAMANIEGO 2.webp" alt="">
                     <h2>Historia del Mundo </h2>
-                    <p> El mejor libro de Hu por Frank Samaniego </p>
+                    <p> El mejor libro de H.U. por Frank Samaniego </p>
                     <p class="precio"> S/ 24</p>
                      <button class="btn__add-cart">Añadir al Carrito</button>
                  </div>
